Archive2/bd/c0b6ab9b36bf15/output
+ g++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread -lboost_system main.cpp
+ ./a.out
+ clang++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread -lcxxrt -ldl -lboost_system main.cpp
main.cpp:3:10: error: variable 't' cannot be implicitly captured in a lambda with no capture-default specified
    [a = t] { [a]{}; };
         ^
main.cpp:8:5: note: in instantiation of function template specialization 'start<int>' requested here
    start(0);
    ^
main.cpp:2:14: note: 't' declared here
void start(T t) {
             ^
main.cpp:3:5: note: lambda expression begins here
    [a = t] { [a]{}; };
    ^
main.cpp:3:15: warning: expression result unused [-Wunused-value]
    [a = t] { [a]{}; };
              ^~~~~
main.cpp:3:5: warning: expression result unused [-Wunused-value]
    [a = t] { [a]{}; };
    ^~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
+ clang++ -stdlib=libc++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread -lcxxrt -ldl -lboost_system main.cpp
main.cpp:3:10: error: variable 't' cannot be implicitly captured in a lambda with no capture-default specified
    [a = t] { [a]{}; };
         ^
main.cpp:8:5: note: in instantiation of function template specialization 'start<int>' requested here
    start(0);
    ^
main.cpp:2:14: note: 't' declared here
void start(T t) {
             ^
main.cpp:3:5: note: lambda expression begins here
    [a = t] { [a]{}; };
    ^
main.cpp:3:15: warning: expression result unused [-Wunused-value]
    [a = t] { [a]{}; };
              ^~~~~
main.cpp:3:5: warning: expression result unused [-Wunused-value]
    [a = t] { [a]{}; };
    ^~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
